--- a/TreeStructure.ipynb
+++ b/TreeStructure.ipynb
@@ -93,7 +93,19 @@
     "create table TreePaths (\n",
     "    ancestor_id not null references Persons(id),\n",
     "    descendant_id not null references Persons(id)\n",
-    ");  "
+    ");\n",
+    "\n",
+    "insert into Persons \n",
+    "values (1, '足立'),\n",
+    "    (2, '猪狩'),\n",
+    "    (3, '上田'),\n",
+    "    (4, '江崎'),\n",
+    "    (5, '大神'),\n",
+    "    (6, '加藤'),\n",
+    "    (7, '木島');\n",
+    "\n",
+    "insert into TreePaths\n",
+    "values ("
    ]
   },
   {
