--- a/WhereIn.ipynb
+++ b/WhereIn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ce015323-9cf0-489d-8c1a-899aa0a42ffb",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
+      "\u001b[33mThere's a new jupysql version available (0.10.3), you're running 0.7.2. To upgrade: pip install jupysql --upgrade\u001b[0m\n"
      ]
     }
    ],
@@ -168,9 +167,177 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a6d9f585-448b-4c80-8e5e-2c6263b5ac69",
+   "metadata": {},
+   "source": [
+    "## 複数の候補にどれか当てはまる場合の合計値を出す\n",
+    "+ 1~3位の合計入賞回数をもとめる"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4b3a4572-88b3-4112-b197-8c3bd57575a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "drop table if exists RacingResults, HorseNames;\n",
+    "CREATE TABLE RacingResults\n",
+    "(track_id CHAR(3) NOT NULL,\n",
+    " race_date DATE NOT NULL,\n",
+    " race_nbr INTEGER NOT NULL,\n",
+    " win_name CHAR(30) NOT NULL,\n",
+    " place_name CHAR(30) NOT NULL,\n",
+    " show_name CHAR(30) NOT NULL,\n",
+    "    PRIMARY KEY (track_id, race_date, race_nbr));\n",
+    "\n",
+    "CREATE TABLE HorseNames\n",
+    "(horse CHAR(30) NOT NULL PRIMARY KEY);\n",
+    "\n",
+    "INSERT INTO RacingResults VALUES(1, '2007-05-01', 1, 'A', 'B', 'C');\n",
+    "INSERT INTO RacingResults VALUES(1, '2007-05-01', 2, 'E', 'F', 'P');\n",
+    "INSERT INTO RacingResults VALUES(1, '2007-05-02', 1, 'B', 'C', 'A');\n",
+    "INSERT INTO RacingResults VALUES(2, '2007-05-02', 1, 'O', 'P', 'Q');\n",
+    "INSERT INTO RacingResults VALUES(2, '2007-05-02', 2, 'A', 'P', 'Q');\n",
+    "\n",
+    "INSERT INTO HorseNames VALUES('A');\n",
+    "INSERT INTO HorseNames VALUES('B');\n",
+    "INSERT INTO HorseNames VALUES('C');\n",
+    "INSERT INTO HorseNames VALUES('D');\n",
+    "INSERT INTO HorseNames VALUES('E');\n",
+    "INSERT INTO HorseNames VALUES('F');\n",
+    "INSERT INTO HorseNames VALUES('O');\n",
+    "INSERT INTO HorseNames VALUES('P');\n",
+    "INSERT INTO HorseNames VALUES('Q');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ef4b6789-dfcf-4e20-a783-12f380b79c6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "8 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>horse</th>\n",
+       "            <th>count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>A                             </td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>B                             </td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>C                             </td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>E                             </td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F                             </td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>O                             </td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>P                             </td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Q                             </td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('A                             ', 3),\n",
+       " ('B                             ', 2),\n",
+       " ('C                             ', 2),\n",
+       " ('E                             ', 1),\n",
+       " ('F                             ', 1),\n",
+       " ('O                             ', 1),\n",
+       " ('P                             ', 3),\n",
+       " ('Q                             ', 2)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- ちなみに1~3位の合計入賞回数ももとめる場合、さらに簡単にできる:\n",
+    "select h.horse, count(*)\n",
+    "from RacingResults as r, HorseNames as h\n",
+    "where h.horse in (r.win_name, r.place_name, r.show_name)\n",
+    "group by h.horse\n",
+    "order by h.horse"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a99caf6f-51cd-4c97-9923-90e8e911f227",
+   "id": "53247660-eaa4-4346-b92c-7b2fd726719b",
    "metadata": {},
    "outputs": [],
    "source": []
