--- a/CalcMode.ipynb
+++ b/CalcMode.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "c6a0ea13-4e63-40b5-827c-4ab2dc284dc3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql\n",
     "import os\n",
@@ -36,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "id": "8bf16fe9-0cb3-430d-9b86-4143fe9d66cd",
    "metadata": {},
    "outputs": [
@@ -65,7 +56,7 @@
        "[]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,6 +134,69 @@
     "select\n",
     "    mode() within group (order by income desc)\n",
     "from Graduates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d7b7b49a-a22d-4126-bdb0-29d53856eecb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>income</th>\n",
+       "            <th>cnt</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>10000</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>20000</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(10000, 3), (20000, 3)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- dense_rankを使う\n",
+    "select income, cnt\n",
+    "from (\n",
+    "    select\n",
+    "        income,\n",
+    "        cnt,\n",
+    "        dense_rank() over (order by cnt desc) as rnk\n",
+    "    from (\n",
+    "        select income, count(*) as cnt\n",
+    "        from Graduates\n",
+    "        group by income\n",
+    "    ) as tmp\n",
+    ")  as tmp2\n",
+    "where rnk = 1"
    ]
   },
   {
