add solution in ConsecutiveId

--- a/ConsecutiveId.ipynb
+++ b/ConsecutiveId.ipynb
@@ -163,8 +163,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "402a9b24-5271-4daa-a5c7-c95621701e61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>start_num</th>\n",
+       "            <th>end_num</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5</td>\n",
+       "            <td>5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>7</td>\n",
+       "            <td>8</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>10</td>\n",
+       "            <td>12</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>14</td>\n",
+       "            <td>None</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 3), (5, 5), (7, 8), (10, 12), (14, None)]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- 差集合: 0 4,6,9 14の間が連続した数列になることを利用\n",
+    "select col+1 as start_num,\n",
+    "    lead(col,1) over (order by col) - 1 as end_num\n",
+    "from (\n",
+    "    select generate_series(\n",
+    "        (select min(col1) from tbl), (select max(col1) from tbl)\n",
+    "    ) as col\n",
+    "    except\n",
+    "    select col1\n",
+    "    from tbl\n",
+    "    union\n",
+    "    values ((select max(col1) from tbl)+1), ((select min(col1) from tbl)-1)\n",
+    ") as tmp\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2af51f07-07a5-48d4-8da1-440a7b095428",
    "metadata": {},
    "outputs": [],
    "source": []
