--- a/Subset.ipynb
+++ b/Subset.ipynb
@@ -147,7 +147,7 @@
    ],
    "source": [
     "%%sql\n",
-    "-- havingを利用\n",
+    "-- havingを利用(集合の1:1対応)\n",
     "select sh.shop\n",
     "from ShopItems as sh\n",
     "join Items it\n",
@@ -442,6 +442,7 @@
    ],
    "source": [
     "%%sql\n",
+    "-- 引き算(except)で表現する\n",
     "select distinct shop\n",
     "from ShopItems si1\n",
     "-- (要求されるitem) \\subset (shopのitem) であればよい\n",
