--- a/OverLapsDateRange.ipynb
+++ b/OverLapsDateRange.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "efe23e7a-1f43-4e17-9c1e-da9a33ac9a1e",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,8 @@
       "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
       "Done.\n",
       "Done.\n",
-      "15 rows affected.\n"
+      "Done.\n",
+      "17 rows affected.\n"
      ]
     },
     {
@@ -58,13 +59,14 @@
        "[]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
+    "drop view if exists tbl10;\n",
     "drop table if exists emp_project;\n",
     "CREATE TABLE emp_project (\n",
     "    empno varchar NULL,\n",
@@ -85,16 +87,18 @@
     "     ('7839','KING','14','2005-01-29','2005-01-30'),\n",
     "     ('7839','KING','11','2005-01-26','2005-01-27'),\n",
     "     ('7839','KING','5','2005-01-20','2005-01-24'),\n",
+    "     ('7939','KING','17','2005-01-20','2005-01-30'),\n",
     "     ('7934','MILLER','3','2005-01-18','2005-01-22'),\n",
     "     ('7934','MILLER','12','2005-01-27','2005-01-28'),\n",
     "     ('7934','MILLER','15','2005-01-30','2005-02-03'),\n",
     "     ('7934','MILLER','9','2005-01-24','2005-01-27'),\n",
-    "     ('7934','MILLER','6','2005-01-21','2005-01-23');"
+    "     ('7934','MILLER','6','2005-01-21','2005-01-23'),\n",
+    "     ('7934','MILLER','16','2005-01-22','2005-01-23');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "edb61cae-905b-4b4e-98eb-2ecc62e09ce4",
    "metadata": {},
    "outputs": [
@@ -103,7 +107,7 @@
      "output_type": "stream",
      "text": [
       "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
-      "7 rows affected.\n"
+      "8 rows affected.\n"
      ]
     },
     {
@@ -170,6 +174,15 @@
        "        <tr>\n",
        "            <td>7934</td>\n",
        "            <td>MILLER</td>\n",
+       "            <td>3 < 16</td>\n",
+       "            <td>2005-01-18</td>\n",
+       "            <td>2005-01-22</td>\n",
+       "            <td>2005-01-22</td>\n",
+       "            <td>2005-01-23</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>7934</td>\n",
+       "            <td>MILLER</td>\n",
        "            <td>3 < 6</td>\n",
        "            <td>2005-01-18</td>\n",
        "            <td>2005-01-22</td>\n",
@@ -194,11 +207,12 @@
        " ('7782', 'CLARK', '10 < 13', datetime.date(2005, 1, 25), datetime.date(2005, 1, 28), datetime.date(2005, 1, 28), datetime.date(2005, 2, 2)),\n",
        " ('7839', 'KING', '2 < 5', datetime.date(2005, 1, 17), datetime.date(2005, 1, 21), datetime.date(2005, 1, 20), datetime.date(2005, 1, 24)),\n",
        " ('7839', 'KING', '5 < 8', datetime.date(2005, 1, 20), datetime.date(2005, 1, 24), datetime.date(2005, 1, 23), datetime.date(2005, 1, 25)),\n",
+       " ('7934', 'MILLER', '3 < 16', datetime.date(2005, 1, 18), datetime.date(2005, 1, 22), datetime.date(2005, 1, 22), datetime.date(2005, 1, 23)),\n",
        " ('7934', 'MILLER', '3 < 6', datetime.date(2005, 1, 18), datetime.date(2005, 1, 22), datetime.date(2005, 1, 21), datetime.date(2005, 1, 23)),\n",
        " ('7934', 'MILLER', '9 < 12', datetime.date(2005, 1, 24), datetime.date(2005, 1, 27), datetime.date(2005, 1, 27), datetime.date(2005, 1, 28))]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,8 +233,120 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "id": "dc761979-b10f-4a6b-a9ad-a646ba342cee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "7 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>empno</th>\n",
+       "            <th>ename</th>\n",
+       "            <th>overlaps</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>7782</td>\n",
+       "            <td>CLARK</td>\n",
+       "            <td>4 < 7</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>7782</td>\n",
+       "            <td>CLARK</td>\n",
+       "            <td>7 < 10</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>7782</td>\n",
+       "            <td>CLARK</td>\n",
+       "            <td>10 < 13</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>7839</td>\n",
+       "            <td>KING</td>\n",
+       "            <td>2 < 5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>7839</td>\n",
+       "            <td>KING</td>\n",
+       "            <td>5 < 8</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>7934</td>\n",
+       "            <td>MILLER</td>\n",
+       "            <td>3 < 6</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>7934</td>\n",
+       "            <td>MILLER</td>\n",
+       "            <td>9 < 12</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('7782', 'CLARK', '4 < 7'),\n",
+       " ('7782', 'CLARK', '7 < 10'),\n",
+       " ('7782', 'CLARK', '10 < 13'),\n",
+       " ('7839', 'KING', '2 < 5'),\n",
+       " ('7839', 'KING', '5 < 8'),\n",
+       " ('7934', 'MILLER', '3 < 6'),\n",
+       " ('7934', 'MILLER', '9 < 12')]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- 3<16は3<6の中に包含されている\n",
+    "select empno, ename,\n",
+    "    proj_id || ' < ' || nxt_proj_id as overlaps\n",
+    "from (\n",
+    "    select *,\n",
+    "        lead(proj_start, 1) over (\n",
+    "            partition by ename\n",
+    "            order by proj_end, proj_start\n",
+    "        ) as nxt_proj_start,\n",
+    "        lead(proj_end, 1) over (\n",
+    "            partition by ename\n",
+    "            order by proj_end, proj_start\n",
+    "        ) as nxt_proj_end,\n",
+    "        lead(proj_id,1) over (\n",
+    "            partition by ename\n",
+    "            order by proj_end, proj_start\n",
+    "        ) as nxt_proj_id\n",
+    "    from emp_project\n",
+    ") as tmp\n",
+    "where nxt_proj_start between proj_start and proj_end and\n",
+    "nxt_proj_end > proj_end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e88c721-bd50-4a86-93c4-3f998566c0e0",
+   "metadata": {},
+   "source": [
+    "+ 各人でoverlapする期間を求める"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4cfd0265-3a1f-46c3-953a-3da46ab79b66",
+   "id": "ac3d0a45-cf1d-4159-aa92-ff7e86966797",
    "metadata": {},
    "outputs": [],
    "source": []
