add update example in Cut

--- a/Cut.ipynb
+++ b/Cut.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b5cbea58-0528-411f-99bc-d60adec61ea1",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d6641beb-f6ee-4a7d-b8ee-604da5c247b6",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
        "[]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,6 +160,94 @@
     "        else null\n",
     "    end as grade\n",
     "from tbl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bb1182d1-ec50-4119-aaf9-6197251b080e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "Done.\n",
+      "5 rows affected.\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>name</th>\n",
+       "            <th>point</th>\n",
+       "            <th>grade</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Alice</td>\n",
+       "            <td>68</td>\n",
+       "            <td>D</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Bob</td>\n",
+       "            <td>79</td>\n",
+       "            <td>C</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Carol</td>\n",
+       "            <td>81</td>\n",
+       "            <td>B</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Dave</td>\n",
+       "            <td>0</td>\n",
+       "            <td>D</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Eve</td>\n",
+       "            <td>100</td>\n",
+       "            <td>A</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Alice', 68, 'D'),\n",
+       " ('Bob', 79, 'C'),\n",
+       " ('Carol', 81, 'B'),\n",
+       " ('Dave', 0, 'D'),\n",
+       " ('Eve', 100, 'A')]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- updateする場合もcase文が有効\n",
+    "ALTER TABLE tbl\n",
+    "ADD if not exists grade char(1);\n",
+    "\n",
+    "update tbl\n",
+    "set grade = case\n",
+    "        when point between 0 and 70 then 'D'\n",
+    "        when point between 71 and 80 then 'C'\n",
+    "        when point between 81 and 90 then 'B'\n",
+    "        when point between 91 and 100 then 'A'\n",
+    "        else null\n",
+    "    end;\n",
+    "\n",
+    "select *\n",
+    "from tbl;"
    ]
   },
   {
