--- a/NotExists.ipynb
+++ b/NotExists.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "id": "4dc91060-7b2b-4b36-b53c-16ad23ecedda",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql\n",
     "import os\n",
@@ -36,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "id": "62ae604c-b48f-4fad-943a-6a4091feda49",
    "metadata": {},
    "outputs": [
@@ -85,7 +76,7 @@
        "[]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "34462e22-14d6-46d4-ac26-74960d6efca1",
    "metadata": {},
    "outputs": [
@@ -175,7 +166,7 @@
        "[('C',)]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,6 +181,58 @@
     "    where a1.key = a2.key and\n",
     "    -- valがnullもありうることに注意\n",
     "    (a2.val is null or a2.val <> 1)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "959fe58c-fa1f-45d7-9083-b1c23e5c1f66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>key</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>C</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('C',)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select distinct key\n",
+    "from ArrayTbl2 as a1\n",
+    "where not exists (\n",
+    "    select *\n",
+    "    from ArrayTbl2 as a2\n",
+    "    where a1.key = a2.key and\n",
+    "    -- valがnullである対策としてcoalesceをつかうのもよい\n",
+    "    coalesce(a2.val, 0) <> 1\n",
     ")"
    ]
   },
