--- a/CoalesceRecipes.ipynb
+++ b/CoalesceRecipes.ipynb
@@ -553,6 +553,7 @@
    ],
    "source": [
     "%%sql\n",
+    "-- left join + where is nullで対応\n",
     "select distinct id\n",
     "from customers as c\n",
     "left join orders as o\n",
