--- a/CompleteData.ipynb
+++ b/CompleteData.ipynb
@@ -225,6 +225,7 @@
    ],
    "source": [
     "%%sql\n",
+    "-- left joinですべての候補に対して強制joinさせる\n",
     "select distinct\n",
     "    t1.student_id,\n",
     "    t2.subject,\n",
