--- a/ConsecutiveId.ipynb
+++ b/ConsecutiveId.ipynb
@@ -531,7 +531,7 @@
    ],
    "source": [
     "%%sql\n",
-    "-- 2つの連番を数えるなら\n",
+    "-- 2つの連番を数えるならmaxを使って、すべてのstatusが空であるものを見つける\n",
     "select seat-1 as start_num,\n",
     "    seat as end_num\n",
     "from (\n",
