--- a/CountRecipes.ipynb
+++ b/CountRecipes.ipynb
@@ -258,6 +258,7 @@
    ],
    "source": [
     "%%sql\n",
+    "-- count(distinct material)で重複検知する\n",
     "select center\n",
     "from Materials\n",
     "group by center\n",
