--- a/FindMissing.ipynb
+++ b/FindMissing.ipynb
@@ -189,8 +189,9 @@
    ],
    "source": [
     "%%sql\n",
-    "select distinct d2.diagram_name, d2.bubble_name, d3.flow_name\n",
-    "    from DataFlowDiagrams as d2, DataFlowDiagrams as d3"
+    "-- 全ての候補を列挙するクエリ\n",
+    "select distinct d1.diagram_name, d1.bubble_name, d2.flow_name\n",
+    "    from DataFlowDiagrams as d1, DataFlowDiagrams as d2"
    ]
   },
   {
@@ -250,6 +251,7 @@
    ],
    "source": [
     "%%sql\n",
+    "-- 全ての候補からnot existsでfilterする\n",
     "select distinct d1.diagram_name, d1.bubble_name, d2.flow_name\n",
     "from DataFlowDiagrams as d1, DataFlowDiagrams as d2\n",
     "where not exists (\n",
@@ -318,6 +320,7 @@
    ],
    "source": [
     "%%sql\n",
+    "-- 全ての候補からexceptでフィルタする\n",
     "select distinct d1.diagram_name, d1.bubble_name, d2.flow_name\n",
     "from DataFlowDiagrams as d1, DataFlowDiagrams as d2\n",
     "except\n",
