--- a/GroupConcat.ipynb
+++ b/GroupConcat.ipynb
@@ -132,6 +132,7 @@
    ],
    "source": [
     "%%sql\n",
+    "-- Postgresqlの場合、string_aggを使う\n",
     "select group_id,\n",
     "    string_agg(cast(id as varchar(16)), ',' order by group_id) as ids\n",
     "from tbl\n",
