--- a/AllNotNull.ipynb
+++ b/AllNotNull.ipynb
@@ -128,6 +128,7 @@
    ],
    "source": [
     "%%sql\n",
+    "-- count(sbmt_date)が非nullをcountしないことを利用\n",
     "select dpt\n",
     "from Students\n",
     "group by dpt\n",
@@ -178,6 +179,7 @@
    ],
    "source": [
     "%%sql\n",
+    "-- count(sbmt_date)をsumで置き換えた\n",
     "select dpt\n",
     "from Students\n",
     "group by dpt\n",
@@ -283,6 +285,7 @@
    ],
    "source": [
     "%%sql\n",
+    "-- window関数を使う場合\n",
     "select distinct dpt\n",
     "from (\n",
     "    select dpt,sbmt_date,\n",
@@ -337,6 +340,7 @@
    ],
    "source": [
     "%%sql\n",
+    "-- exceptをつかう\n",
     "select distinct dpt\n",
     "from Students\n",
     "except\n",
