--- a/GroupJoin.ipynb
+++ b/GroupJoin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "ab58c790-0cb0-4296-abd4-211d9c89f8af",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "beda7044-a7ad-41aa-9a6d-d9e947b533bb",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
        "[]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "7622a182-beba-4ee4-a776-4383d9cf8a31",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
        "[]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,6 +323,96 @@
     "from Budgeted as b\n",
     "group by category"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d1fb94fe-a29a-4862-a7ce-26ba34830614",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "Done.\n",
+      "Done.\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>category</th>\n",
+       "            <th>sum_est</th>\n",
+       "            <th>sum_act</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>9100</td>\n",
+       "            <td>121.00</td>\n",
+       "            <td>77.00</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>9200</td>\n",
+       "            <td>19.00</td>\n",
+       "            <td>15.00</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(9100, Decimal('121.00'), Decimal('77.00')),\n",
+       " (9200, Decimal('19.00'), Decimal('15.00'))]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- categoryをテーブル化(第三正規化)\n",
+    "drop view if exists Categories;\n",
+    "create view Categories as (\n",
+    "    select distinct task, category\n",
+    "    from Budgeted\n",
+    ");\n",
+    "\n",
+    "-- union allでまとめる\n",
+    "select category,\n",
+    "    sum(est_cost) as sum_est,\n",
+    "    sum(act_cost) as sum_act\n",
+    "from (\n",
+    "    select c.category,\n",
+    "        est_cost,\n",
+    "        0 as act_cost\n",
+    "    from Categories as c\n",
+    "    inner join Budgeted as b\n",
+    "    on b.task = c.task\n",
+    "    union all\n",
+    "    select c.category,\n",
+    "        0 as est_cost,\n",
+    "        act_cost\n",
+    "    from Categories as c\n",
+    "    inner join Actual as a\n",
+    "    on a.task = c.task\n",
+    ") as tmp\n",
+    "group by category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aaccbd4d-a97d-4393-ba0c-466cd3484ad3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
