--- a/FindSequence.ipynb
+++ b/FindSequence.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "2d3356df-7db2-428f-b62f-7c6c02cd5a75",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql\n",
     "import os\n",
@@ -47,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "765b3b80-f912-48a4-8295-ea86dd8cbf61",
    "metadata": {},
    "outputs": [
@@ -67,7 +58,7 @@
        "[]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,6 +226,164 @@
     "    union\n",
     "    values ((select max(col1) from tbl)+1), ((select min(col1) from tbl)-1)\n",
     ") as tmp\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5754ade2-ae12-4712-b0c9-2be892d7f9cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "9 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>col1</th>\n",
+       "            <th>?column?</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>11</td>\n",
+       "            <td>-3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5</td>\n",
+       "            <td>-1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>10</td>\n",
+       "            <td>-3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>7</td>\n",
+       "            <td>-2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>12</td>\n",
+       "            <td>-3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "            <td>0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>8</td>\n",
+       "            <td>-2</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(11, -3),\n",
+       " (3, 0),\n",
+       " (5, -1),\n",
+       " (10, -3),\n",
+       " (2, 0),\n",
+       " (7, -2),\n",
+       " (12, -3),\n",
+       " (1, 0),\n",
+       " (8, -2)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select t1.col1, count(t2.col1) - t1.col1\n",
+    "    from tbl as t1, tbl as t2\n",
+    "    where t2.col1 <= t1.col1\n",
+    "    group by t1.col1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "dd93a23b-c256-4483-84a4-ca62b09da76a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "4 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>start_num</th>\n",
+       "            <th>end_num</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5</td>\n",
+       "            <td>5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>7</td>\n",
+       "            <td>8</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>10</td>\n",
+       "            <td>12</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 3), (5, 5), (7, 8), (10, 12)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select\n",
+    "    min(idx) as start_num,\n",
+    "    max(idx) as end_num\n",
+    "from (\n",
+    "    -- gapがあれば、gapが飛び飛びになる\n",
+    "    select t1.col1, count(t2.col1) - t1.col1\n",
+    "    from tbl as t1, tbl as t2\n",
+    "    where t2.col1 <= t1.col1\n",
+    "    group by t1.col1\n",
+    ") as tmp(idx, gap)\n",
+    "group by gap\n",
+    "order by start_num"
    ]
   },
   {
