--- a/FindSequence.ipynb
+++ b/FindSequence.ipynb
@@ -230,95 +230,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "5754ade2-ae12-4712-b0c9-2be892d7f9cb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
-      "9 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>col1</th>\n",
-       "            <th>?column?</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>11</td>\n",
-       "            <td>-3</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>3</td>\n",
-       "            <td>0</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>5</td>\n",
-       "            <td>-1</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>10</td>\n",
-       "            <td>-3</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2</td>\n",
-       "            <td>0</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>7</td>\n",
-       "            <td>-2</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>12</td>\n",
-       "            <td>-3</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>1</td>\n",
-       "            <td>0</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>8</td>\n",
-       "            <td>-2</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[(11, -3),\n",
-       " (3, 0),\n",
-       " (5, -1),\n",
-       " (10, -3),\n",
-       " (2, 0),\n",
-       " (7, -2),\n",
-       " (12, -3),\n",
-       " (1, 0),\n",
-       " (8, -2)]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%sql\n",
-    "select t1.col1, count(t2.col1) - t1.col1\n",
-    "    from tbl as t1, tbl as t2\n",
-    "    where t2.col1 <= t1.col1\n",
-    "    group by t1.col1"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "id": "dd93a23b-c256-4483-84a4-ca62b09da76a",
    "metadata": {},
@@ -384,6 +295,18 @@
     ") as tmp(idx, gap)\n",
     "group by gap\n",
     "order by start_num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bcf52d7-68db-4057-b530-c8a87fed5d69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "select (\n",
+    "from tbl as t1"
    ]
   },
   {
