--- a/SecondBiggest.ipynb
+++ b/SecondBiggest.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "id": "a98cc465-f3fe-4bd5-8a5c-e0b1df0740ec",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql\n",
     "import os\n",
@@ -36,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "id": "dc2af2f4-da42-4aec-8d42-777fc8e169c4",
    "metadata": {},
    "outputs": [
@@ -56,7 +47,7 @@
        "[]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +344,7 @@
    ],
    "source": [
     "%%sql\n",
-    "-- window関数\n",
+    "-- window関数(nth_value/first_value/last_value)がある場合\n",
     "select *\n",
     "from (\n",
     "    select *,\n",
@@ -364,6 +355,72 @@
     "    from tbl\n",
     ") as tmp\n",
     "where value = second"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3ce7497f-ad17-4147-8cd4-85b2ced402c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>id</th>\n",
+       "            <th>group_id</th>\n",
+       "            <th>value</th>\n",
+       "            <th>idx</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>1</td>\n",
+       "            <td>6</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5</td>\n",
+       "            <td>2</td>\n",
+       "            <td>5</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(2, 1, 6, 2), (5, 2, 5, 2)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- window関数(標準のrow_numberのみ)の場合\n",
+    "select *\n",
+    "from (\n",
+    "    select *,\n",
+    "        row_number() over (\n",
+    "            partition by group_id\n",
+    "            order by value desc\n",
+    "    ) as idx\n",
+    "    from tbl\n",
+    ") as tmp\n",
+    "where idx = 2"
    ]
   },
   {
