--- a/FindSequence.ipynb
+++ b/FindSequence.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2d3356df-7db2-428f-b62f-7c6c02cd5a75",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "id": "3300316f-74b1-45a4-ab05-14145c444ff0",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
        "[]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,6 +538,80 @@
     "    group by s1.seat\n",
     ") as tmp\n",
     "group by end_num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "db74f5b9-145d-4f2a-9084-a90656c9db29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "4 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>start_num</th>\n",
+       "            <th>end_num</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>8</td>\n",
+       "            <td>11</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>13</td>\n",
+       "            <td>13</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>15</td>\n",
+       "            <td>16</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(3, 5), (8, 11), (13, 13), (15, 16)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- 連番 -> 同じidxであることを利用\n",
+    "select min(seat) as start_num,\n",
+    "    max(seat) as end_num\n",
+    "from (\n",
+    "    -- 衝突しない\n",
+    "    select *,\n",
+    "        row_number() over (\n",
+    "            order by seat\n",
+    "        ) - row_number() over (\n",
+    "            partition by status\n",
+    "            order by seat\n",
+    "        ) as idx\n",
+    "    from Seats\n",
+    ") as tmp\n",
+    "group by idx\n",
+    "having max(status) = '空'\n",
+    "order by start_num"
    ]
   },
   {
