--- a/Largest.ipynb
+++ b/Largest.ipynb
@@ -213,6 +213,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "2b647454-2e42-4860-9300-e81670ad4a8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "7 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>flag</th>\n",
+       "            <th>id</th>\n",
+       "            <th>group_id</th>\n",
+       "            <th>value</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>x</td>\n",
+       "            <td>1</td>\n",
+       "            <td>1</td>\n",
+       "            <td>4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>x</td>\n",
+       "            <td>2</td>\n",
+       "            <td>1</td>\n",
+       "            <td>6</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>o</td>\n",
+       "            <td>3</td>\n",
+       "            <td>1</td>\n",
+       "            <td>7</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>x</td>\n",
+       "            <td>4</td>\n",
+       "            <td>1</td>\n",
+       "            <td>0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>x</td>\n",
+       "            <td>5</td>\n",
+       "            <td>2</td>\n",
+       "            <td>5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>o</td>\n",
+       "            <td>6</td>\n",
+       "            <td>2</td>\n",
+       "            <td>10</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>o</td>\n",
+       "            <td>7</td>\n",
+       "            <td>3</td>\n",
+       "            <td>8</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('x', 1, 1, 4),\n",
+       " ('x', 2, 1, 6),\n",
+       " ('o', 3, 1, 7),\n",
+       " ('x', 4, 1, 0),\n",
+       " ('x', 5, 2, 5),\n",
+       " ('o', 6, 2, 10),\n",
+       " ('o', 7, 3, 8)]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- flagで最も大きい数を識別する\n",
+    "select case\n",
+    "    when (\n",
+    "        select max(value)\n",
+    "        from tbl as t2\n",
+    "        where t1.group_id = t2.group_id\n",
+    "    ) = value then 'o' else 'x'\n",
+    "    end as flag,\n",
+    "    t1.*\n",
+    "from tbl as t1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "9050bff9-9ed3-40d8-af6c-dfec67d09333",
    "metadata": {},
